Make the fleet work in the in-memory dev/demo stack
The fleet API (sites, groups, devices, tagging) was postgres-only, so the
lightweight demo stack (no database) returned 404 for every fleet call and
the Sites & Groups / Devices pages could not be used there.

Split FleetService into an interface with two profile-gated implementations:
- PostgresFleetService (postgres) keeps the existing JdbcTemplate + RLS body.
- InMemoryFleetService (!postgres) is a process-local, tenant-scoped map
  store mirroring the same behaviour: per-tenant isolation, a unique site
  name and device serial (raised as a DuplicateKeyException, mapped to 409
  exactly like the Postgres path), and group tags that cascade on delete.
  The dev-owner key (X-Tenant-Key) authorizes as owner, so scoped roles are
  not needed there.

FleetController and FleetExceptionAdvice are now always present (no longer
postgres-gated); AccessService is injected optionally and the access-
inspection endpoint degrades to 501 when absent. Adding NEW agents is the one
gap kept postgres-only (enrollment lives in the agent-handshake auth store);
the in-memory path returns a clear 501 and the demo stack already ships the
lab-agent. GatewayController already treated FleetService as optional, so bulk
ops work in-memory too.

Covered by a new InMemoryFleetServiceTest; the Postgres path stays covered by
GatewayPostgresIT. Full gateway suite green.